Fixed footer icons w bootstrap by grouping in md-col-4. Deleted extra margin in css

--- a/css/style.css
+++ b/css/style.css
@@ -156,7 +156,7 @@ padding: 0px 200px;
 
 ul, li{
 text-align: center;
-margin: 10px 20px;
+/*margin: 10px 20px;*/
 }
 
 .content-block {
